--- a/instagram-clone/src/styles/App.css
+++ b/instagram-clone/src/styles/App.css
@@ -1,31 +1,32 @@
-body, html {
-    margin: 0;
+body,
+html {
+  margin: 0;
 }
 
 .App {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; /* temporary */
-    font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* temporary */
+  font-size: 30px;
 }
 
-.App>:last-child{
-    flex-grow: 1;
+.App > :last-child {
+  flex-grow: 1;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .navBar {
-    display: flex;
-    gap: 20px;
-    padding: 0px 20px;
+  display: flex;
+  gap: 20px;
+  padding: 0px 20px;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
