--- a/instagram-clone/src/styles/App.css
+++ b/instagram-clone/src/styles/App.css
@@ -6,14 +6,15 @@ html {
 .App {
   display: flex;
   height: 100vh; /* temporary */
-  font-size: 2rem;
+  font-size: 18px;
+  font-family: sans-serif;
 }
 
 .App > :last-child {
   flex-grow: 1;
   background-color: whitesmoke;
 }
-
+ 
 .header {
   display: flex;
   flex-direction: column;
@@ -22,16 +23,19 @@ html {
   border-right: 2px solid lightgray;
   padding: 20px;
   padding-right: 60px;
-  gap: 20px;
+  gap: 30px;
 }
 
+.title {
+    padding-top: 50px;
+}
 .navBar>* {
-    padding: 20px 0px;
+    padding: 10px 0px;
 }
 
 .navBar> * > * {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
 }
 .navBar>:last-child {
     position: absolute;
