--- a/instagram-clone/src/styles/App.css
+++ b/instagram-clone/src/styles/App.css
@@ -5,7 +5,7 @@ html {
 
 .App {
   display: flex;
-  height: 100vh; /* temporary */
+  height: 100%; /* temporary */
   font-size: 18px;
   font-family: sans-serif;
 }
@@ -24,6 +24,9 @@ html {
   padding: 0px 50px;
   padding-right: 120px;
   gap: 30px;
+  position: sticky;
+  top: 0;
+  height: 100vh;
 }
 
 .title {
