Add Login & Fix Home Components
Added and styled Login component.
Fixed navBar buttons to scroll correctly.
Updated posts in Home component by adding buttons and a comment section.
Comment quantities are randomly generated and require snapshot update.

--- a/instagram-clone/src/styles/Home.css
+++ b/instagram-clone/src/styles/Home.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 1.5rem;
-  margin-top: 2rem;
 }
 
 /* FOLLOWER'S STORIES */
@@ -140,6 +139,80 @@
 
 .followersNextBtn {
   position: absolute;
+}
+
+.postDescrip {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+}
+
+.postNavBar {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) ;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 10px 0px;
+}
+
+.postNavBar>:first-child {
+    display: flex;
+    padding-left: 10px;
+    gap: 10px;
+}
+
+.postNavBar>:last-child {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+
+.postLikes {
+    display: flex;
+    gap:10px;
+    padding-left:15px;
+}
+
+.postCaption {
+    padding:10px 15px;
+}
+
+.postComment {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid rgb(0, 0, 0,0.5);
+}
+
+.postComment > input {
+    border: none;
+    font-size: 20px;
+    background-color: transparent;
+    font-weight: bold;
+}
+.postComment> input::placeholder {
+    color: rgb(0, 0, 0,0.4);
+}
+input:focus {
+    outline: none;
+}
+.postComment>* {
+    padding: 20px;
+}
+
+.postComment > *:hover{
+    opacity: 1;
+}
+
+.postComment button {
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    color: dodgerblue;
+    font-weight: bold;
+    opacity: .4;
 }
 /* RIGHT DIV */
 .rightDiv {
