--- a/instagram-clone/src/styles/App.css
+++ b/instagram-clone/src/styles/App.css
@@ -6,7 +6,7 @@ html {
 .App {
   display: flex;
   height: 100%; /* temporary */
-  font-size: 18px;
+  font-size: 17px;
   font-family: sans-serif;
 }
 
@@ -14,38 +14,83 @@ html {
   flex-grow: 1;
   background-color: whitesmoke;
 }
- 
+
 .header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   border-right: 2px solid lightgray;
-  padding: 0px 50px;
-  padding-right: 120px;
-  gap: 30px;
+  gap: 20px;
   position: sticky;
   top: 0;
   height: 100vh;
 }
 
 .title {
-    padding-top: 50px;
-}
-.navBar>* {
-    padding: 10px 0px;
+  padding-top: 50px;
+  padding-left: 20px;
 }
 
-.navBar> * > * {
-    display: flex;
-    align-items: center;
+.navBar {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
-.navBar>:last-child {
-    position: absolute;
-    bottom: 0;
+
+.navBar > * {
+  width: 220px;
+  padding-top: 16px;
+}
+
+.navBar> div {
+  padding-right: 100px;
+}
+
+.navBar > * > * {
+  display: flex;
+  align-items: center;
+}
+.navBar > * > a, .moreWrapper>div>:last-child{
+  padding-left: 20px;
+  gap: 5px;
+}
+
+.moreWrapper {
+  margin-bottom: 0;
+  margin-top: auto;
+}
+
+.moreWrapper > div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.moreWrapper> div > :last-child{
+  display: flex;
+  align-items: center;
+}
+
+.moreMenu {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 3px;
+}
+.moreMenu > * {
+  padding: 11px 0px;
+  padding-left: 20px;
+}
+.moreWrapper > * >*:hover {
+  cursor: pointer;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.hidden {
+  display: none;
 }
