Reformat Routes & Add Signup Page
NavBar is no a longer fixed component and is a subcomponent.
Users can sign up or log in with email and password.
All signups/logins have uses relevant method such as logInEmail(), createAcc(), etc.
Successful logins and signups route to default home component.
Only google login displays correct profile info.
Incorrect info alerts error message.

--- a/instagram-clone/src/styles/Post.css
+++ b/instagram-clone/src/styles/Post.css
@@ -1,5 +1,10 @@
 .Post {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
   align-items: center;
   justify-content: center;
+}
+
+h1 {
+  text-align: center;
 }
