--- a/instagram-clone/src/styles/Profile.css
+++ b/instagram-clone/src/styles/Profile.css
@@ -1,5 +1,6 @@
 .Profile {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 8fr;
     align-items: center;
     justify-content: center;
 }
