--- a/instagram-clone/src/styles/Profile.css
+++ b/instagram-clone/src/styles/Profile.css
@@ -1,6 +1,124 @@
-.Profile {
+.profilePage {
     display: grid;
     grid-template-columns: 1fr 8fr;
+}
+
+.profile {
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+}
+.topProfile {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 0px 100px;
+    border-bottom: 2px solid lightgray;
+}
+.profileInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.profileInfo>:first-child {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    font-size: 30px;
+}
+.profileInfoBtns {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.profileInfoBtns > *:not(:last-child) {
+    border: none;
+    background-color: dodgerblue;
+    color: white;
+    font-size: large;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.profileInfoBtns > :last-child {
+    border: none;
+    background-color: transparent;
+    font-weight:bold ;
+    font-size: 30px;
+}
+
+.profileInfoBtns > button:hover {
+    cursor: pointer;
+}
+
+.topProfile img {
+    margin: auto;
+    padding-bottom: 40px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.topProfile>div {
+    font-size: 20px;
+}
+
+.userPostsNavBar {
+    grid-column: 1/4;
+    display: flex;
     align-items: center;
     justify-content: center;
+    gap: 100px;
+    top: 0;
+    padding: 20px 0px;
+    width: 100%;
+    font-size: 20px;
+}
+
+.userPostsNavBar>* {
+    opacity: .6;
+}
+
+.userPostsNavBar>*:hover {
+    opacity: 1;
+    cursor: pointer !important;
+}
+
+.userPosts {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 40px;
+    padding: 0px 100px;
+    position: relative;
+}
+
+.userPost {
+    position: relative;
+    color: white;
+    cursor: pointer;
+}
+
+.userPost:hover .userPostInfo {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.6);
+}
+.userPost > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.userPostInfo {
+    display: none;
+}
+
+.userPostInfo div {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 1.7rem;
 }
