--- a/instagram-clone/src/styles/Post.css
+++ b/instagram-clone/src/styles/Post.css
@@ -125,7 +125,7 @@
 }
 .imgEditFinal span {
   position: absolute;
-  top: 20px;
+  top: 0;
   animation-name: textJump;
   animation-duration: .4s;
   border-bottom: none;
@@ -138,7 +138,7 @@
   padding: 5px 15px;
   font-weight: bold;
   font-size: 20px;
-  bottom: 25px;
+  bottom: 10px;
   position: absolute;
 }
 .imgEditFinal canvas {
@@ -156,4 +156,24 @@
   100% {
     font-size:30px;
   }
+}
+
+@keyframes loading {
+  to {transform: rotate(360deg);}
+}
+
+.loading {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  animation: loading 1s ease-in-out infinite;
+  background: linear-gradient(60deg, yellow, red, purple);
+  padding: 6px;
+}
+
+.loading div {
+  background-color: whitesmoke;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
