--- a/instagram-clone/src/styles/Profile.css
+++ b/instagram-clone/src/styles/Profile.css
@@ -1,124 +1,202 @@
 .profilePage {
-    display: grid;
-    grid-template-columns: 1fr 8fr;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
 }
 
 .profile {
-    display: flex;
-    flex-direction: column;
-    padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 .topProfile {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin: 0px 100px;
-    border-bottom: 2px solid lightgray;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin: 0px 100px;
+  border-bottom: 2px solid lightgray;
+  padding-top: 50px;
 }
 .profileInfo {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.profileInfo>:first-child {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    font-size: 30px;
+.profileInfo > :first-child {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  font-size: 30px;
 }
 .profileInfoBtns {
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
 .profileInfoBtns > *:not(:last-child) {
-    border: none;
-    background-color: dodgerblue;
-    color: white;
-    font-size: large;
-    padding: 10px 20px;
-    border-radius: 5px;
+  border: none;
+  background-color: dodgerblue;
+  color: white;
+  font-size: large;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 
 .profileInfoBtns > :last-child {
-    border: none;
-    background-color: transparent;
-    font-weight:bold ;
-    font-size: 30px;
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .profileInfoBtns > button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .topProfile img {
-    margin: auto;
-    padding-bottom: 40px;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+  margin: auto;
+  margin-bottom: 40px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
 }
 
-.topProfile>div {
-    font-size: 20px;
+.topProfile > div {
+  font-size: 20px;
 }
 
 .userPostsNavBar {
-    grid-column: 1/4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 100px;
-    top: 0;
-    padding: 20px 0px;
-    width: 100%;
-    font-size: 20px;
+  grid-column: 1/4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  top: 0;
+  padding: 20px 0px;
+  width: 100%;
+  font-size: 20px;
 }
 
-.userPostsNavBar>* {
-    opacity: .6;
+.userPostsNavBar > * {
+  opacity: 0.6;
 }
 
-.userPostsNavBar>*:hover {
-    opacity: 1;
-    cursor: pointer !important;
+.userPostsNavBar > *:hover {
+  opacity: 1;
+  cursor: pointer !important;
 }
 
 .userPosts {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 40px;
-    padding: 0px 100px;
-    position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+  padding: 0px 100px;
+  position: relative;
 }
 
 .userPost {
-    position: relative;
-    color: white;
-    cursor: pointer;
+  position: relative;
+  color: white;
+  cursor: pointer;
 }
 
 .userPost:hover .userPostInfo {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.6);
 }
 .userPost > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .userPostInfo {
-    display: none;
+  display: none;
 }
 
 .userPostInfo div {
-    display: inline-block;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 1.7rem;
+}
+
+
+/* PROFILE POPUP */
+
+.profilePopupWrapper {
+  position: absolute;
+  background-color: rgb(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.profilePopup {
+  display: flex;
+  margin: auto;
+  width: 25%;
+  max-width: 50%;
+  position: sticky;
+  top: 50%;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.profilePopupOptions {
+    display: flex;
+    flex-direction: column;
+    background-color: lightgray;
+    width: 100%;
+    gap: 2px;
+    text-align: center;
+    border-radius: 20px;
+}
+.profilePopupOptions div{
+    background-color: white;
+    padding: 10px;
     font-weight: bold;
-    font-size: 1.7rem;
+}
+.profilePopupOptions > div:hover:not(:first-child) {
+  cursor: pointer;
+}
+.profilePopupOptions > div:first-child {
+    border-radius: 20px 20px 0px 0px;
+}
+.profilePopupOptions > div:nth-child(2) {
+  color: dodgerblue;
+}
+.profilePopupOptions > div:last-child {
+    border-radius: 0px 0px 20px 20px;
+  color: gray;
+}
+
+.profileImgCropperWrapper {
+    position: sticky;
+    display: flex;
+    flex-direction: column;
+    top: 25%;
+    margin: auto;
+    width: 400px;
+    background-color: white;
+}
+.profileImgCropperWrapper > div {
+    position: relative;
+    width: 400px;
+    height: 400px;
+}
+.profileImgCropperWrapper > button {
+    background-color: white;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    color: dodgerblue;
+    opacity: .7;
+    padding: 10px;
+}
+.profileImgCropperWrapper > button:hover {
+    opacity: 1;
 }
