Update Comment Fetching
Comments are fetched in getFeed() and sent to PostList component under posts prop.
User can see how comment quantity, but cannot view all comments.

--- a/instagram-clone/src/styles/Home.css
+++ b/instagram-clone/src/styles/Home.css
@@ -211,6 +211,16 @@ input:focus {
   font-weight: bold;
   opacity: 0.4;
 }
+
+.viewComment {
+  color:gray;
+  display: inline-block;
+  
+}
+.viewComment:hover {
+  cursor: pointer;
+  color: black;
+} 
 /* RIGHT DIV */
 .rightDiv {
   display: flex;
