Add Test User & Switch to Dynamic Posting
Added test account for users to use app on Login component.
Updated email login to function with test account and authentic emails.
Updated posts to post under user's info rather than test users.
Users cannot see their posts in feed or profile and is stored in firebase.
Fixed post's comments styling.

--- a/instagram-clone/src/styles/Forms.css
+++ b/instagram-clone/src/styles/Forms.css
@@ -93,6 +93,7 @@ fieldset {
   display: flex;
   justify-content: center;
   padding: 30px;
+  background-color: white;
 }
 
 .signUp button {
@@ -105,6 +106,7 @@ fieldset {
   background-color: transparent;
   border: none;
 }
+
 .googleLogin {
   display: flex;
   align-items: center;
@@ -130,10 +132,17 @@ fieldset {
     cursor: pointer;
 }
 
-.signUp {
+.testAccLogin {
   background-color: white;
+  text-align: center;
 }
 
+.testAccLogin button {
+  padding: 10px;
+  color: dodgerblue;
+  font-size: 18px;
+  cursor: grab;
+}
 /* SIGN UP COMPONENT */
 .signupPage {
   display: flex;
@@ -211,6 +220,7 @@ fieldset {
   cursor: pointer;
 }
 
+/* terms of services/conditions in signup form */
 .ToS {
   font-size:14px;
   opacity: 0.5;
